# sparse-matrix-io-comparison

./: .gitignore  CMakeLists.txt  PIGO.cpp  README.md  bench_common.hpp  bench_eigen.cpp  bench_eigen_fmm.cpp  bench_fmm.cpp  bench_graphblas_fmm.cpp  bench_lagraph.cpp  bench_main.cpp  bench_pandas.py  bench_pigo.cpp  bench_polars.py  common.py  fmm.cpp  generate_matrix_market.cpp  graphblas_fmm.cpp  main.cpp  pigo_bench.cpp  requirements.txt  sort_matrix_market.cpp
cmake/: PIGO.cmake  fast_matrix_market.cmake
lagraph_lib/: .gitignore  get_lagraph.sh
